--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="character_name">Name: %s</string>
-    <string name="character_age">Age: %d</string>
+    <string name="fox_name">Name: %s</string>
+    <string name="fox_age">Age: %d</string>
 </resources>
