--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
     <string name="app_name">ClassApp</string>
-    <string name="title_activity_main">MainActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="character_name">Name: %s</string>
-    <string name="character_age">Age: %d</string>
+    <string name="hello_world">Hello, World!</string>
+    <string name="a_picture_of_a_character_in_rick_and_morty">a picture of a character in rick and morty</string>
+    <string name="name">Name: %s</string>
+    <string name="age">Age: %d</string>
 </resources>
